<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.spacedancer.globalandromathick.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/main_navigation"
        android:orientation="vertical"
        android:background="@mipmap/bg">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:elevation="0dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimaryDark"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </com.google.android.material.appbar.AppBarLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@mipmap/bg">

            <EditText
                android:id="@+id/main_old_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:background="@color/bg_register"
                android:fadingEdge="vertical"
                android:hint="@string/auth_hint_email"

                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="3dp"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <EditText
                android:id="@+id/main_new_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:background="@color/bg_register"
                android:fadingEdge="vertical"
                android:hint="@string/auth_hint_new_email"

                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="3dp"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <EditText
                android:id="@+id/main_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:focusableInTouchMode="true"
                android:hint="@string/auth_prompt_password"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/main_newPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:background="@color/bg_register"
                android:fadingEdge="vertical"
                android:focusableInTouchMode="true"
                android:hint="@string/auth_new_pass"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="3dp"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <Button
                android:id="@+id/main_changeEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/main_new_email"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="10dp"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="15dp"
                android:background="@mipmap/but_bg"
                android:text="@string/auth_btn_change"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <Button
                android:id="@+id/main_changePass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/main_newPassword"
                android:layout_centerHorizontal="true"

                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="10dp"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="15dp"
                android:background="@mipmap/but_bg"
                android:text="@string/auth_btn_change"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <Button
                android:id="@+id/main_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/main_old_email"
                android:layout_centerHorizontal="true"

                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="10dp"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="15dp"
                android:background="@mipmap/but_bg"
                android:text="@string/auth_btn_send"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <Button
                android:id="@+id/main_change_email_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/main_change_password_button"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="10dp"
                android:background="@mipmap/but_bg"
                android:text="@string/auth_change_email"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <Button
                android:id="@+id/main_change_password_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/main_sending_pass_reset_button"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:background="@mipmap/but_bg"
                android:text="@string/auth_change_password"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <Button
                android:id="@+id/main_sending_pass_reset_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="10dp"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:background="@mipmap/but_bg"
                android:text="@string/auth_send_password_reset_email"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <Button
                android:id="@+id/main_remove_user_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/main_sign_out"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="10dp"
                android:background="@mipmap/but_bg"
                android:text="@string/auth_remove_user"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <Button
                android:id="@+id/main_sign_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="10dp"
                android:background="@mipmap/but_bg"
                android:text="@string/auth_btn_sign_out"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

        </RelativeLayout>

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/main_login_progressBar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/main_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_nav_menu" />

</RelativeLayout>