<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.spacedancer.globalandromathick.ResetPasswordActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/reset_navigation"
        android:orientation="vertical"
        android:background="@mipmap/bg" >

        <ImageView
            android:id="@+id/resetImageView"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_width="@dimen/logo_w_h"
            android:layout_height="@dimen/logo_w_h"
            android:layout_above="@id/reset_MainTitle_TextView"
            android:layout_alignParentTop="false"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/am_logo" />

        <TextView
            android:id="@+id/reset_MainTitle_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/reset_subtitle_TextView"
            android:layout_alignParentRight="false"
            android:layout_centerHorizontal="true"
            android:padding="16dp"
            android:text="@string/auth_lbl_forgot_password"
            android:textColor="@android:color/black"
            android:textSize="20dp"
            android:textStyle="italic"
            android:typeface="serif" />

        <TextView
            android:id="@+id/reset_subtitle_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/reset_email_TextInputLayout"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:padding="16dp"
            android:text="@string/auth_forgot_password_msg"
            android:textColor="@android:color/black"
            android:textSize="14dp"
            android:textStyle="bold|italic"
            android:typeface="serif" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reset_email_TextInputLayout"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="15dp"
            android:background="@color/bg_register"
            android:textColorHint="@color/btn_login_bg" >

            <EditText
                android:id="@+id/reset_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fadingEdge="vertical"
                android:hint="@string/auth_hint_email"
                android:inputType="textEmailAddress"
                android:scrollbarDefaultDelayBeforeFade="@android:integer/status_bar_notification_info_maxnum"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Login Button -->

        <Button
            android:id="@+id/reset_login_btn_reset_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/reset_email_TextInputLayout"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="15dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@mipmap/but_bg"
            android:text="@string/auth_btn_reset_password"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/reset_btn_back"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/reset_login_btn_reset_password"
            android:layout_marginTop="15dp"
            android:background="@color/bg_register"
            android:text="@string/auth_btn_back"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent" />

    </RelativeLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/reset_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_nav_menu" />

    <ProgressBar
        android:id="@+id/reset_progressBar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>