<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.spacedancer.globalandromathick.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/login_navigation"
        android:orientation="vertical"
        android:background="@mipmap/bg">

        <ImageView
            android:id="@+id/loginImageView"
            android:layout_width="@dimen/logo_w_h"
            android:layout_height="@dimen/logo_w_h"
            android:layout_above="@id/login_email_TextInputLayout"
            android:layout_alignParentTop="false"
            android:layout_centerHorizontal="true"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:src="@mipmap/am_logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_email_TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/login_password_TextInputLayout"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="15dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@color/bg_register"
            android:textColorHint="@color/btn_login_bg">

            <EditText
                android:id="@+id/login_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fadingEdge="vertical"
                android:hint="@string/auth_hint_email"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password_TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/login_btn_login"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="15dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@color/bg_register"
            android:textColorHint="@color/btn_login_bg"
            android:textStyle="bold|italic">

            <EditText
                android:id="@+id/login_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fadingEdge="vertical"
                android:hint="@string/auth_hint_password"
                android:inputType="textPassword"
                android:scrollbarDefaultDelayBeforeFade="@android:integer/status_bar_notification_info_maxnum"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="15dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@mipmap/but_bg"
            android:text="@string/auth_btn_login"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/login_login_btn_reset_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_btn_login"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="15dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@color/bg_register"
            android:text="@string/auth_btn_forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/login_btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_login_btn_reset_password"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="15dip"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@color/bg_register"
            android:text="@string/auth_btn_link_to_register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15dp" />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/login_login_progressBar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/login_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_nav_menu" />

</RelativeLayout>